# bananagen

./: .env.example  .gitignore  LICENSE  README.md  WARP.md  bananagen.db  pyproject.toml  test_requesty_api.py
.github/: copilot-instructions.md
bananagen/: __main__.py  api.py  batch_runner.py  cli.py  core.py  db.py  gemini_adapter.py  logging_config.py  scanner.py
bananagen/adapters/: openrouter_adapter.py  requesty_adapter.py
bananagen/models/: api_key.py  api_provider.py
docs/: agent_integration.md
specs/001-build-a-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-command/contracts/: openapi.yaml  test_generate.py
specs/002-add-api-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py  test_batch_runner.py  test_cli.py  test_core.py  test_db.py  test_gemini_adapter.py  test_gemini_mock.py  test_scanner.py
tests/contract/: test_batch_post.py  test_configure_provider.py  test_generate_post.py  test_generate_provider.py  test_scan_post.py  test_status_get.py
tests/integration/: test_batch_workflow.py  test_generation_workflow.py  test_multi_provider_generation.py  test_openrouter_config.py  test_placeholder_workflow.py  test_requesty_config.py  test_scan_workflow.py
tests/unit/: __init__.py  test_api.py  test_api_key.py  test_api_provider.py  test_batch_runner.py  test_cli.py  test_cli_provider.py  test_core.py  test_db.py  test_logging_config.py  test_openrouter_adapter.py  test_requesty_adapter.py
(+2 files in other folders)
