[tool.poetry]
name = "bananagen"
version = "0.1.0"
description = "CLI tool for generating image assets using Gemini 2.5 Flash"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bananagen"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pillow = "^10.0.0"
aiohttp = "^3.8.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core"

[tool.poetry.scripts]
bananagen = "bananagen.cli:main"
